--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#Sobre">Sobre Nós</a></li>
           <li><a href="#Conteudo">Conteúdo</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="#Contato">Contato</a></li>
           <li><a href="">Doar</a></li>
         </ul>
       </div>
@@ -59,5 +59,39 @@
 
       </div>
     </div>
+    <div id="Meta">
+      <div class="Meta">
+        <h1>
+          Nossa Meta
+        </h1>
+        
+        <p>
+          Diminuir a quantidade de lixo nos mares e, com isso, preservar o meio ambiente e fortalecer a sociedade no âmbito do saneamento básico; ajudando assim, na sustentabilidade do nosso planeta.
+        </p>
+      </div>
+    </div>
+    <div id="Contato">
+      <div class="Contato">
+        <h1>
+          Quer fazer parte de algum jeito?
+        </h1>
+
+        <p>
+          Entre em contato conosco por nossas redes sociais.
+        </p>
+      </div>
+    </div>
+    <footer id="Baseborad">
+      <div class="Baseboard">
+        <h1>
+          Clear Ocean
+        </h1>
+
+        <p>
+          Nossas águas são nosso maior<br>patrimônio, que temos de<br>preservar ao máximo.
+        </p>
+      </div>
+    </footer>
+
   </body>
 </html>
