--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <li><a href="#Contato">Contato</a></li>
           <li><a href="">Doar</a></li>
         </ul>
+        <div class="imgheader">
+          <img style="width: 120px" src="./image/logo.png" alt="logo.png" />
+        </div>
       </div>
     </div>
     <div id="home">
@@ -36,62 +39,71 @@
       </div>
     </div>
     <div id="Sobre">
-      <div class="Sobre">
-        <h1>Sobre A Nossa Empresa</h1>
-        <p>
-          A empresa “Ocean Clean”, responsável pela distribuição e
-          comercialização do sistema de filtração que consiste em várias etapas,
-          será alocado entre divisões de rios e mares, ele tem como objetivo
-          filtrar o lixo da água, e logo após destiná-lo à reciclagem, sendo o
-          plástico para fazer filamento de impressora 3d, o metal para
-          instituições que o reciclam, o que restar será descartado corretamente
-          sem fins reutilizáveis.
-        </p>
+      <div class="sobreinf">
+        <div class="Sobre">
+          <h1>Sobre A Nossa Empresa</h1>
+          <p>
+            A empresa “Ocean Clean”, responsável pela distribuição e
+            comercialização do sistema de filtração que consiste em várias
+            etapas, será alocado entre divisões de rios e mares, ele tem como
+            objetivo filtrar o lixo da água, e logo após destiná-lo à
+            reciclagem, sendo o plástico para fazer filamento de impressora 3d,
+            o metal para instituições que o reciclam, o que restar será
+            descartado corretamente sem fins reutilizáveis.
+          </p>
+        </div>
+        <div class="Sobreimg">
+          <img width="70%" src="./image/Water drop-bro 1.png" alt="agua-caindo.png" />
+        </div>
       </div>
     </div>
     <div id="Conteudo">
       <div class="Conteudo">
         <h1>O Que Queremos Combater</h1>
+        <div class="caixas">
+          <div class="caixa">
+            <img src="./image/mar_podre.png" alt="mar_podre">
+            <p>Aguas improprias para<br />banho.</p>
+          </div>
 
-        <div class="caixa">
-        <p>Aguas improprias para<br />banho.</p>
+          <div class="caixa">
+            <img src="./image/mar_mais_podre.png" alt="mar_mais_podre">
+            <p>Lixos de rios indo para<br />os mares.</p>
+          </div>
         </div>
-
       </div>
     </div>
     <div id="Meta">
       <div class="Meta">
-        <h1>
-          Nossa Meta
-        </h1>
-        
+        <h1>Nossa Meta</h1>
+
         <p>
-          Diminuir a quantidade de lixo nos mares e, com isso, preservar o meio ambiente e fortalecer a sociedade no âmbito do saneamento básico; ajudando assim, na sustentabilidade do nosso planeta.
+          Diminuir a quantidade de lixo nos mares e, com isso, preservar o meio
+          ambiente e fortalecer a sociedade no âmbito do saneamento básico;
+          ajudando assim, na sustentabilidade do nosso planeta.
         </p>
       </div>
+      
     </div>
     <div id="Contato">
       <div class="Contato">
-        <h1>
-          Quer fazer parte de algum jeito?
-        </h1>
+        <h1>Quer fazer parte de algum jeito?</h1>
 
-        <p>
-          Entre em contato conosco por nossas redes sociais.
-        </p>
+        <p>Entre em contato conosco por nossas redes sociais.</p>
       </div>
     </div>
     <footer id="Baseborad">
       <div class="Baseboard">
-        <h1>
-          Clear Ocean
-        </h1>
+        <h1>Clear Ocean</h1>
 
         <p>
-          Nossas águas são nosso maior<br>patrimônio, que temos de<br>preservar ao máximo.
+          Nossas águas são nosso maior<br />patrimônio, que temos de<br />preservar
+          ao máximo.
         </p>
+        <div class="imgfooter">
+          <img src="./image/logo1.png" alt="logo.png" />
+        </div>
       </div>
     </footer>
-
   </body>
 </html>
