--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
           ajudando assim, na sustentabilidade do nosso planeta.
         </p>
       </div>
-      
+      <div class="imgmeta">
+        <img src="./image/Water drop-bro 2.png" alt="lave_as_mãos">
+      </div>
     </div>
     <div id="Contato">
       <div class="Contato">
