--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
           </p>
         </div>
         <div class="Sobreimg">
-          <img width="70%" src="./image/Water drop-bro 1.png" alt="agua-caindo.png" />
+          <img
+            width="70%"
+            src="./image/Water drop-bro 1.png"
+            alt="agua-caindo.png"
+          />
         </div>
       </div>
     </div>
@@ -62,36 +66,41 @@
         <h1>O Que Queremos Combater</h1>
         <div class="caixas">
           <div class="caixa">
-            <img src="./image/mar_podre.png" alt="mar_podre">
+            <img src="./image/mar_podre.png" alt="mar_podre" />
             <p>Aguas improprias para<br />banho.</p>
           </div>
 
           <div class="caixa">
-            <img src="./image/mar_mais_podre.png" alt="mar_mais_podre">
+            <img src="./image/mar_mais_podre.png" alt="mar_mais_podre" />
             <p>Lixos de rios indo para<br />os mares.</p>
           </div>
+        </div>
+        <div class="bot1">
+          <a href="">VER MAIS</a>
         </div>
       </div>
     </div>
     <div id="Meta">
-      <div class="Meta">
-        <h1>Nossa Meta</h1>
+      <div class="Metainf">
+        <div class="Meta">
+          <h1>Nossa Meta</h1>
 
-        <p>
-          Diminuir a quantidade de lixo nos mares e, com isso, preservar o meio
-          ambiente e fortalecer a sociedade no âmbito do saneamento básico;
-          ajudando assim, na sustentabilidade do nosso planeta.
-        </p>
-      </div>
-      <div class="imgmeta">
-        <img src="./image/Water drop-bro 2.png" alt="lave_as_mãos">
+          <p>
+            Diminuir a quantidade de lixo nos mares e, com isso, preservar o
+            meio ambiente e fortalecer a sociedade no âmbito do saneamento
+            básico; ajudando assim, na sustentabilidade do nosso planeta.
+          </p>
+        </div>
+        <div class="imgmeta">
+          <img src="./image/Water drop-bro 2.png" alt="lave_as_mãos" />
+        </div>
       </div>
     </div>
     <div id="Contato">
       <div class="Contato">
         <h1>Quer fazer parte de algum jeito?</h1>
 
-        <p>Entre em contato conosco por nossas redes sociais.</p>
+        <p>Entre em contato conosco por nossas redes<br />sociais.</p>
       </div>
     </div>
     <footer id="Baseborad">
