--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>Lixos de rios indo para<br />os mares.</p>
           </div>
         </div>
-        <div class="bot1">
+        <div class="botmais">
           <a href="">VER MAIS</a>
         </div>
       </div>
@@ -97,10 +97,21 @@
       </div>
     </div>
     <div id="Contato">
-      <div class="Contato">
-        <h1>Quer fazer parte de algum jeito?</h1>
+      <div class="Contatoinf">
+        <div class="Contato">
+          <h1>Quer fazer parte de algum jeito?</h1>
 
-        <p>Entre em contato conosco por nossas redes<br />sociais.</p>
+          <p>Entre em contato conosco por nossas redes<br />sociais.</p>
+        </div>
+        <div class="botnome">
+          <a href="">Nome</a>
+        </div>
+        <div class="botemail">
+          <a href="">Email</a>
+        </div>
+        <div class="botmsg">
+          <a href="">Mensagem</a>
+        </div>
       </div>
     </div>
     <footer id="Baseborad">
