--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@
 
           <p>Entre em contato conosco por nossas redes<br />sociais.</p>
         </div>
-        <div class="botnome">
-          <a href="">Nome</a>
-        </div>
-        <div class="botemail">
-          <a href="">Email</a>
+        <div class="NomeeEmail">
+          <div class="botnome">
+            <a href="">Nome</a>
+          </div>
+          <div class="botemail">
+            <a href="">Email</a>
+          </div>
         </div>
         <div class="botmsg">
           <a href="">Mensagem</a>
