--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
         </div>
         <div class="NomeeEmail">
           <div class="botnome">
-            <a href="">Nome</a>
+            <input placeholder="Nome" href=""></input>
           </div>
           <div class="botemail">
-            <a href="">Email</a>
+            <input placeholder="Email" href=""></input>
           </div>
         </div>
         <div class="botmsg">
-          <a href="">Mensagem</a>
+          <input placeholder="Mensagem" href=""></input>
         </div>
       </div>
     </div>
