--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
           <p>Entre em contato conosco por nossas redes<br />sociais.</p>
         </div>
         <div class="NomeeEmail">
-          <div class="botnome">
-            <input placeholder="Nome" href=""></input>
+          <div >
+            <input class="botnome" placeholder="Nome" href=""></input>
           </div>
-          <div class="botemail">
-            <input placeholder="Email" href=""></input>
+          <div>
+            <input class="botemail"placeholder="Email" href=""></input>
           </div>
         </div>
-        <div class="botmsg">
-          <input placeholder="Mensagem" href=""></input>
+        <div me>
+          <input class="botmsg" placeholder="Mensagem" href=""></input>
         </div>
       </div>
     </div>
