--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
       </div>
     </div>
     <div id="home">
+      <div class="bghome">
       <div class="home">
         <p>
           NOSSAS ÁGUAS SÃO NOSSO<br />MAIOR PATRIMÔNIO, TEMOS DE<br />PRESERVAR
           AO MAXÍMO!
         </p>
       </div>
+    </div>
     </div>
     <div id="Sobre">
       <div class="sobreinf">
@@ -65,18 +67,24 @@
       <div class="Conteudo">
         <h1>O Que Queremos Combater</h1>
         <div class="caixas">
+          
           <div class="caixa">
             <img src="./image/mar_podre.png" alt="mar_podre" />
-            <p>Aguas improprias para<br />banho.</p>
+            <p>Aguas improprias para<br/>banho.</p>
           </div>
 
           <div class="caixa">
             <img src="./image/mar_mais_podre.png" alt="mar_mais_podre" />
-            <p>Lixos de rios indo para<br />os mares.</p>
+            <p>Lixos de rios indo para<br/>os mares.</p>
+          </div>
+
+          <div class="caixa">
+            <img src="./image/mâonamâo.png" alt="mão_sobre_mão" />
+            <p>Melhorar o sistema de<br/>saúde pública.</p>
           </div>
         </div>
         <div class="botmais">
-          <a href="">VER MAIS</a>
+          <a href="">Ver Mais</a>
         </div>
       </div>
     </div>
