--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           NOSSAS ÁGUAS SÃO NOSSO<br />MAIOR PATRIMÔNIO, TEMOS DE<br />PRESERVAR
           AO MAXÍMO!
         </p>
-      </div>
+        </div>
+      <img src="./image/bg.svg" alt="imagem de celular e garrafa">
     </div>
     </div>
     <div id="Sobre">
@@ -117,6 +118,9 @@
         </div>
         <div me>
           <input class="botmsg" placeholder="Mensagem" href=""></input>
+        </div>
+        <div>
+          <img src="./image/Muie.png" alt="muié">
         </div>
       </div>
     </div>
