--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
       </div>
     </div>
     <div id="Contato">
+    <div id="backcontato">
+      <div class="foto">
+        <img src="./image/Muie.png" alt="muie">
+      </div>
+    </div>
       <div class="Contatoinf">
         <div class="Contato">
           <h1>Quer fazer parte de algum jeito?</h1>
@@ -116,11 +121,8 @@
             <input class="botnome" placeholder="Nome" href=""></input>
             <input class="botemail"placeholder="Email" href=""></input>
         </div>
-        <div me>
+        <div >
           <input class="botmsg" placeholder="Mensagem" href=""></input>
-        </div>
-        <div>
-          <img src="./image/Muie.png" alt="muié">
         </div>
       </div>
     </div>
